# xgboost-rs

./: .gitmodules  Cargo.toml  README.md  setup_xgboost.sh
python/preprocessing/: preprocess.py
src/: booster.rs  dmatrix.rs  error.rs  lib.rs  types.rs
src/parameters/: booster.rs  mod.rs  preprocessing.rs
src/preprocessing/: encoder.rs  imputer.rs  mod.rs  pipeline.rs  scaler.rs  transform.rs
tests/: into_dmatrix_test.rs
tests/data/: pipeline.json
xgboost-rs-sys/: Cargo.toml  README.md  build.rs  build_xgboost.sh  install_deps.sh  setup_xgboost.sh  wrapper.h  xgboost_cmake.patch
