[package]
name = "xgboostrs"
version = "0.0.1"
license = "MIT"
authors = ["SuperHedge <superhedge@protonmail.com>"]
repository = "https://github.com/superhedge22/xgboost-rs"
description = "Bindings to dmlc/xgboost."
readme = "README.md"
keywords = ["xgboost", "machinelearning", "bindings", "boosting", "tree"]
categories = ["api-bindings", "external-ffi-bindings"]
edition = "2021"

[features]
use_serde = ["serde"]

[dependencies]
libc = "0.2"
xgboost-rs-sys = { path = "xgboost-rs-sys", version = "0.0.1" }
derive_builder = "0.11"
indexmap = "1.9"
tempfile = "3.1"
log = "0.4"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
thiserror = { version = "2.0" }

[dev-dependencies]
approx = "0.5"

[build-dependencies]
xgboost-rs-sys = { path = "xgboost-rs-sys", version = "0.0.1" }


[workspace]
members = ["xgboost-rs-sys"]
